--- a/WebApplication1/WebStore.csproj
+++ b/WebApplication1/WebStore.csproj
@@ -13,6 +13,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Areas\Admin\Views\Home\Index.cshtml" />
+    <None Include="Areas\Admin\Views\Home\ProductList.cshtml" />
+    <None Include="Areas\Admin\Views\Shared\_Layout.cshtml" />
+    <None Include="Views\Profile\Index.cshtml" />
+    <None Include="Views\Profile\Orders.cshtml" />
+    <None Include="Views\Profile\Partial\_ProfileMenu.cshtml" />
+    <None Include="Views\Profile\_ProfileLayout.cshtml" />
+    <None Include="wwwroot\Admin\fonts\fontawesome-webfont.svg" />
+    <None Include="wwwroot\Admin\fonts\glyphicons-halflings-regular.svg" />
+    <None Include="wwwroot\Admin\js\bootstrap.min.js" />
+    <None Include="wwwroot\Admin\js\custom.js" />
+    <None Include="wwwroot\Admin\js\jquery-1.10.2.js" />
     <None Include="wwwroot\template\fonts\fontawesome-webfont.svg" />
     <None Include="wwwroot\template\fonts\glyphicons-halflings-regular.svg" />
     <None Include="wwwroot\template\js\bootstrap.min.js" />
@@ -56,6 +68,11 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
   </ItemGroup>
 
 </Project>
