--- a/WebApplication1/bundleconfig.json
+++ b/WebApplication1/bundleconfig.json
@@ -2,22 +2,22 @@
 // More info at https://go.microsoft.com/fwlink/?LinkId=808241
 [
   {
-    "outputFileName": "wwwroot/css/site.min.css",
+    "outputFileName": "wwwroot/template/css/site.min.css",
     // An array of relative input file paths. Globbing patterns supported
     "inputFiles": [
-      "wwwroot/css/prettyPhoto.css",
-      "wwwroot/css/price-range.css",
-      "wwwroot/css/animate.css",
-      "wwwroot/css/main.css",
-      "wwwroot/css/responsive.css"
+      "wwwroot/template/css/prettyPhoto.css",
+      "wwwroot/template/css/price-range.css",
+      "wwwroot/template/css/animate.css",
+      "wwwroot/template/css/main.css",
+      "wwwroot/template/css/responsive.css"
     ]
   },
   {
-    "outputFileName": "wwwroot/js/site.min.js",
+    "outputFileName": "wwwroot/template/js/site.min.js",
     "inputFiles": [
-      "wwwroot/js/price-range.js",
-      "wwwroot/js/jquery.prettyPhoto.js",
-      "wwwroot/js/main.js"
+      "wwwroot/template/js/price-range.js",
+      "wwwroot/template/js/jquery.prettyPhoto.js",
+      "wwwroot/template/js/main.js"
     ],
     // Optionally specify minification options
     "minify": {
