--- a/WebApplication1/WebStore.csproj
+++ b/WebApplication1/WebStore.csproj
@@ -58,6 +58,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Areas\Admin\Views\Home\Details.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Areas\Admin\Views\Home\Edit.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Views\Shared\Partial\_ProductItems.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
