--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,7 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/L1_WebApplication1.zip
+/L2_WebApplication1.rar
+/L3_WebApplication1.rar
+/L4_WebApplication1.rar
