--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -2,5 +2,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\Yurrko\\Documents\\WebStore.mdf;Integrated Security=True;Connect Timeout=30"
   },
-  "CustomHelloWorld": "Custom Hello world!"
+  "CustomHelloWorld": "Custom Hello world!",
+  "ClientAdress": "http://localhost:64437/"
 }
