--- a/WebStore.Interfaces/WebStore.Interfaces.csproj
+++ b/WebStore.Interfaces/WebStore.Interfaces.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\WebStore.Domain\WebStore.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Api\" />
+  </ItemGroup>
+
 </Project>
