--- a/WebStore.ServicesHosting/appsettings.json
+++ b/WebStore.ServicesHosting/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\Yurrko\\Documents\\WebStore.mdf;Integrated Security=True;Connect Timeout=30"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
