--- a/WebApplication1/WebStore.csproj
+++ b/WebApplication1/WebStore.csproj
@@ -40,6 +40,7 @@
 
   <ItemGroup>
     <PackageReference Include="BundlerMinifier.Core" Version="2.8.391" />
+    <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
   </ItemGroup>
@@ -50,6 +51,9 @@
     </Content>
     <Content Update="Areas\Admin\Views\Home\Edit.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="log4net.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Update="Views\Shared\Partial\_ProductItems.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
@@ -64,8 +68,9 @@
   <ItemGroup>
     <ProjectReference Include="..\WebStore.Clients\WebStore.Clients.csproj" />
     <ProjectReference Include="..\WebStore.Domain\WebStore.Domain.csproj" />
-    <ProjectReference Include="..\WebStore.Imlementations\WebStore.Implementations.csproj" />
     <ProjectReference Include="..\WebStore.Interfaces\WebStore.Interfaces.csproj" />
+    <ProjectReference Include="..\WebStore.Logger\WebStore.Logger.csproj" />
+    <ProjectReference Include="..\WebStore.Services\WebStore.Services.csproj" />
   </ItemGroup>
 
 </Project>
